# Cordy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.ru.md  cliff.toml  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/agents/: mod.rs
src/config/: mod.rs
src/core/: agent.rs  apply_patch_instructions.md  auth.rs  autonomous.rs  capability.rs  checkpoint.rs  context.rs  mod.rs  models_dev.rs  permission.rs  prompt.rs  session_store.rs  toolcall_text.rs  types.rs  update.rs
src/core/goal/: accounting.rs  mod.rs  prompts.rs  runtime.rs
src/core/goal/templates/: budget_limit.md  continuation.md  objective_updated.md
src/mcp/: mod.rs
src/provider/: anthropic_messages.rs  mod.rs  models_list.rs  openai_chat.rs  openai_compatible.rs  openai_responses.rs  retry.rs
src/skills/: mod.rs
src/tools/: mod.rs  subagent.rs
src/tools/apply_patch/: mod.rs  parser.rs  seek.rs
src/tools/builtins/: apply_patch.rs  bash.rs  edit.rs  glob.rs  goal.rs  grep.rs  ls.rs  mod.rs  multiedit.rs  process.rs  read.rs  rewind.rs  todo.rs  web.rs  write.rs
src/tools/optimize/: mod.rs
src/tui/: goal_display.rs  input.rs  markdown.rs  mod.rs  runtime.rs  theme.rs
tests/fixtures/: anthropic_toolcall.sse  openai_chat_toolcall.sse  openai_responses_toolcall.sse
